work on feedback about alignments and console bugs

--- a/src/components/AdminDB/AdminDB.module.css
+++ b/src/components/AdminDB/AdminDB.module.css
@@ -12,7 +12,8 @@
   color: var(--primary-color);
   text-align: center;
   grid-row: 1;
-  padding: 0.5rem 0;
+  width: 100%;
+  padding: 1rem 0;
 }
 
 .DatabaseTableRow {
